; ModuleID = '/home/carl/AnghaBench/tmux/extr_tty.c_tty_putcode3.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_tty.c_tty_putcode3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tty_putcode3(%struct.tty* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.tty*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.tty* %0, %struct.tty** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %19, label %13

13:                                               ; preds = %5
  %14 = load i32, i32* %9, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %13
  %17 = load i32, i32* %10, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16, %13, %5
  br label %31

20:                                               ; preds = %16
  %21 = load %struct.tty*, %struct.tty** %6, align 8
  %22 = load %struct.tty*, %struct.tty** %6, align 8
  %23 = getelementptr inbounds %struct.tty, %struct.tty* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %10, align 4
  %29 = call i32 @tty_term_string3(i32 %24, i32 %25, i32 %26, i32 %27, i32 %28)
  %30 = call i32 @tty_puts(%struct.tty* %21, i32 %29)
  br label %31

31:                                               ; preds = %20, %19
  ret void
}

declare dso_local i32 @tty_puts(%struct.tty*, i32) #1

declare dso_local i32 @tty_term_string3(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
